data/derived/comb/progs/unify/prog4463.ml.out
Characters 125-126:
  | Cosine u ->  cos (pi *. (eval u))
                                  ^
Error: This expression has type expr but an expression was expected of type
         expr * float * float
